<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ContactList</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="email">Email</string>
    <string name="type">Type</string>
    <string name="add">Add</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_activity_saain">SAainActivity</string>

</resources>
